- Ability to create shortcuts to library sources not showing content from source selected
- Ability to choose random version of auto-generated source playlists as widget or background
- Ability to clone widget and background properties from main menu to submenu items
- Ability to force Settings link in menu
- New management dialog controls to show management dialog for additional sub-menus
- Fixes
 > Fix for setting skin thumbnail property when using Just Select method
 > Fix for menus failing to build when the action for a shortcut contains a unicode character
 > Dirty fix for situations where a playlist in a menu will cause that menu to appear empty

v0.3.4
- XML files are formatted (includes.xml, auto-generated playlists), includes now have an id property
- New 'Settings' available shortcut grouping
- Ability to override available shortcuts type, widget type
- Ability to build main menu and standalone menus
- A couple of small fixes and improvements
- Fix: Work around XBMC translating numering labelID's to their localised string, causing sub-menus not to show

v0.3.3
- Available shortcuts in management dialog improvements:
 > Improved and customisable groupings
 > Control over location and visibility of skin-provided shortcuts
 > UPnP and video sources explorer, including linking to library limited-by-source
 > More PVR options including playing individual channels
 > When using select dialog, now displays label2's and thumbnails
 > Correct thumbnail/icon usage
 > Addition of skin-required shortcuts which can't be deleted
 > Ability to warn user before deleting shortcuts to select actions
- Improved labelID generation
- Add option to tell management dialog not to fill label's on management dialog controls, additional label 500 for window title
- Ability to override shortcut actions based on XBMC version
- Skinners can now only override icons, not thumbnails
- Fix for crash when no profiles.xml file