@@ -82,6 +82,7 @@ thumbnail - the favourites thumbnail
 Add-Ons
 -------
 
-labelID - Name of the add-on (lowercase, without spaces)
+labelID - For the root directory of plugins and programs with no arguments, plugin.addon.name or script.addon.name
+        - For other plugin directories the name as returned by the add-on or based on the label defined in the defaults
 thumbnail - Thumbnail of the add-on
 icon - DefaultAddon.png
