@@ -3,8 +3,10 @@
 	<category label="Debugging">
 		<setting label="Enable debug logging" type="bool" id="enable_logging" default="false"/>
 	</category>
-	<category label="Testing">
+	<category label="Upgrading">
+		<setting label="To test upgrading to XML data store" type="lsep"/>
         <setting label="Has upgraded labels" type="bool" id="upgraded_labels" default="false"/>
 		<setting label="Has upgraded to XML" type="bool" id="upgraded_xml" default="false"/>
+		<setting label="Has upgraded addon labelIDs" type="bool" id="upgraded_labelID" default="false"/>
 	</category>
 </settings>
