@@ -8,6 +8,7 @@ v0.3.5 - Unpublished development build
 - Ability to clone widget and background properties from main menu to submenu items
 - Ability to force Settings link in menu
 - New management dialog controls to show management dialog for additional sub-menus
+- Improved labelID's for add-ons
 - Fixes
  > Fix for setting skin thumbnail property when using Just Select method
  > Fix for menus failing to build when the action for a shortcut contains a unicode character
